# skills

./: .gitignore  AGENTS.md  README.md  SKILL_TOML.md  bootstrap.sh  link-skills.sh  link.sh
.agents/plugins/: marketplace.json
_tools/: postgres_best_practices_cleanup.sh  postgres_best_practices_maintenance.md  postgres_best_practices_snapshot.sh
_tools/postgres/: postgres_best_practices_cleanup.sh  postgres_best_practices_runbook.md  postgres_best_practices_snapshot.sh
_tools/postgres_best_practices/: sources-reviewed.md  top-postgres-skills.md  verification.md
ask-questions-if-underspecified/: SKILL.md
ask-questions-if-underspecified/agents/: openai.yaml
cli-creator/agents/: openai.yaml
codex-changelog/: SKILL.md
codex-changelog/agents/: openai.yaml
commit/: SKILL.md
commit/agents/: openai.yaml
docs/: SKILL_OPENAI_METADATA.md  SKILL_TOML.md
github/: SKILL.md
github-ci/: SKILL.md
github-releases/: SKILL.md
github-reviews/: SKILL.md
learn/: SKILL.md  SKILL.toml
plan-hard/: SKILL.md
plugins/gitstack/projects/ghflow/: pyproject.toml
plugins/gitstack/projects/ghflow/src/ghflow/: checks.py  runtime.py
plugins/gitstack/projects/ghflow/tests/: test_ghflow.py
plugins/gitstack/projects/ghops/: .gitignore  AGENTS.md  pyproject.toml
plugins/gitstack/projects/ghops/src/ghops/: checks.py  user_state.py
plugins/gitstack/projects/ghops/tests/: test_ghops.py
postgres/: .gitignore  SKILL.md  SKILL.toml  postgres.toml.example
questions/: SKILL.toml
skill-audit/: SKILL.md
skill-cli-creator/: SKILL.md
skills/postgres/projects/postgres/: AGENTS.md  Cargo.toml
skills/postgres/projects/postgres/src/: cli.rs  config.rs  db.rs  docs.rs  lib.rs  main.rs  migration.rs  output.rs  tooling.rs  tools.rs
swift-api-design/: SKILL.md
swift-docc/: SKILL.md
yeet/: SKILL.md
(+316 files in other folders)
