[package]
name = "postgres-skill-cli"
version = "1.1.1"
edition = "2024"

[[bin]]
name = "postgres"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5.51", features = ["derive"] }
comfy-table = "7.2.1"
rustls = "0.23.35"
rustls-native-certs = "0.8.2"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["brotli", "deflate", "gzip", "http2", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "time"] }
tokio-postgres = "0.7.15"
tokio-postgres-rustls = "0.13.0"
toml = "0.9.8"
url = "2.5.7"

[dev-dependencies]
pretty_assertions = "1.4.1"
